--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "packages/*"
   ],
   "scripts": {
-    "bootstrap": "./scripts/bootstrap.sh"
+    "bootstrap": "./scripts/bootstrap.sh",
+    "dev:api": "npm --workspace services/api run dev",
+    "build:api": "npm --workspace services/api run build",
+    "db:migrate": "npm --workspace services/api run db:migrate"
   }
 }
