feat(api): add subscription patch/delete, error handling, logging, rate limit, and integration tests

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "./scripts/bootstrap.sh",
     "dev:api": "npm --workspace services/api run dev",
     "build:api": "npm --workspace services/api run build",
-    "db:migrate": "npm --workspace services/api run db:migrate"
+    "db:migrate": "npm --workspace services/api run db:migrate",
+    "test:api": "npm run db:migrate && npm --workspace services/api run test"
   }
 }
