feat: complete setup, API, ingestion, and digest worker milestones with docs

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,8 @@ POSTGRES_DB=news_aggregator
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/news_aggregator
+POSTGRES_PORT=5433
+DATABASE_URL=postgresql://postgres:postgres@localhost:5433/news_aggregator
 
 # Queue
 REDIS_HOST=localhost
@@ -28,4 +28,11 @@ ENCRYPTION_KEY=replace_me_32_chars_minimum
 
 # Ingestion
 INGESTION_INTERVAL_MINUTES=15
+INGESTION_MAX_ITEMS_PER_SOURCE=30
+
+# Digest
+DIGEST_INTERVAL_MINUTES=60
+DIGEST_LOOKBACK_HOURS=72
+DIGEST_MAX_ITEMS=20
+
 DEFAULT_DIGEST_FREQUENCY=daily
