--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "dev:api": "npm --workspace services/api run dev",
     "build:api": "npm --workspace services/api run build",
     "db:migrate": "npm --workspace services/api run db:migrate",
-    "test:api": "npm run db:migrate && npm --workspace services/api run test"
+    "test:api": "npm run db:migrate && npm --workspace services/api run test",
+    "dev:ingestion": "npm --workspace services/ingestion run dev",
+    "build:ingestion": "npm --workspace services/ingestion run build",
+    "run:ingestion:once": "npm --workspace services/ingestion run run-once",
+    "dev:digest": "npm --workspace services/digest-worker run dev",
+    "build:digest": "npm --workspace services/digest-worker run build",
+    "run:digest:once": "npm --workspace services/digest-worker run run-once"
   }
 }
