feat(email-worker): send pending digests via MailHog and persist email events

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,8 @@ EMAIL_PROVIDER=mailhog
 EMAIL_FROM=no-reply@news-aggregator.local
 MAILHOG_SMTP_HOST=localhost
 MAILHOG_SMTP_PORT=1025
+EMAIL_WORKER_INTERVAL_MINUTES=15
+EMAIL_DIGEST_MAX_ITEMS=20
 
 # Security
 JWT_SECRET=replace_me
