--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,11 @@ MAILHOG_SMTP_PORT=1025
 EMAIL_WORKER_INTERVAL_MINUTES=15
 EMAIL_DIGEST_MAX_ITEMS=20
 
+# Service observability ports
+INGESTION_HEALTH_PORT=4101
+DIGEST_HEALTH_PORT=4102
+EMAIL_HEALTH_PORT=4103
+
 # Security
 JWT_SECRET=replace_me
 ENCRYPTION_KEY=replace_me_32_chars_minimum
