refactor(api): layer topics/subscriptions and add email queue integration test

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dev:email": "npm --workspace services/email-worker run dev",
     "build:email": "npm --workspace services/email-worker run build",
     "run:email:once": "npm --workspace services/email-worker run run-once",
+    "test:email": "npm run db:migrate && npm --workspace services/email-worker run test",
     "pipeline:e2e": "./scripts/pipeline-e2e.sh"
   }
 }
