--- a/services/email-worker/package.json
+++ b/services/email-worker/package.json
@@ -8,7 +8,8 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "run-once": "tsx src/index.ts --once"
+    "run-once": "tsx src/index.ts --once",
+    "test": "tsx --test src/**/*.test.ts"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
