feat(admin): add mvp admin dashboard with operational observability endpoints

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "run:email:once": "npm --workspace services/email-worker run run-once",
     "test:email": "npm run db:migrate && npm --workspace services/email-worker run test",
     "dev:web": "npm --workspace apps/web run dev",
-    "pipeline:e2e": "./scripts/pipeline-e2e.sh"
+    "pipeline:e2e": "./scripts/pipeline-e2e.sh",
+    "dev:admin": "npm --workspace apps/admin run dev"
   }
 }
