feat(security): add unsubscribe suppression, admin RBAC, and pipeline hardening

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ REDIS_URL=redis://localhost:6379
 # Email
 EMAIL_PROVIDER=mailhog
 EMAIL_FROM=no-reply@news-aggregator.local
+API_PUBLIC_URL=http://localhost:4000
 MAILHOG_SMTP_HOST=localhost
 MAILHOG_SMTP_PORT=1025
 EMAIL_WORKER_INTERVAL_MINUTES=15
@@ -31,6 +32,7 @@ EMAIL_HEALTH_PORT=4103
 
 # Security
 JWT_SECRET=replace_me
+UNSUBSCRIBE_TOKEN_SECRET=replace_me_unsubscribe_secret
 ENCRYPTION_KEY=replace_me_32_chars_minimum
 
 # Ingestion
